src/index.css
body {
  /* margin: 0; */
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: flex;
  justify-content: center;
  background-color: rgba(255, 230, 86, 0.1);
}

/* font-family: 'Montserrat', sans-serif;
  font-family: 'Sofadi One', cursive;
  font-family: 'Work Sans', sans-serif; */

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}
@media (max-width: 844px) {
  .letuce,
  .turnip,
  .beet,
  .the {
    font-family: 'Sofadi One', cursive;
    text-shadow: 1px 1px black;
    position: absolute;
  }
  .letuce,
  .turnip,
  .beet {
    font-size: 4.5em;
  }
  .letuce {
    /* top: -2vw; */
    color: #e0ff87;
    /* left: 9vw; */
    left: 3%;
  }
  .turnip {
    color: #ffe656;
    /* left: 30vw;
  top: 31vw; */
    top: 11%;
    left: 23%;
  }
  .the {
    color: #0e79b2;
    font-size: 3em;
    top: 38%;
    left: 30%;
  }
  .beet {
    color: #df0054;
    top: 36%;
    left: 52%;
  }
  .characters {
    position: absolute;
    left: 2.5%;
    top: 21%;
    width: 75%;
    height: auto;
  }
  .donut,
  .fresh {
    position: absolute;
    font-family: 'Work Sans';
    font-size: 1.65em;
    line-height: -2em;
    width: 60%;
    font-weight: bold;
  }
  .fresh {
    top: 58%;
    left: 4%;
  }
  .donut {
    top: 48%;
    left: 35%;
  }
  .footer {
    position: absolute;
    top: 85%;
    width: 70%;
    left: 15%;
    font-size: 0.8em;
  }
  .fresh,
  .donut,
  .footer,
  .landing-login {
    color: rgba(0, 0, 0, 0.6);
  }
  .landing-button {
    position: absolute;
    top: 72%;
    left: 23%;
    width: 50%;
    height: 10%;
    border-radius: 20px;
    color: white;
    background-color: #ffe656;
    font-size: 2em;
    font-weight: bolder;
    text-shadow: 1px 1px black;
  }
  .landing-login {
    position: absolute;
    top: 80.5%;
    left: 25%;
  }
  .form-container {
    display: flex;
    justify-content: center;
    border-radius: 100px;
    box-shadow: inset 0px 0px 1px 1px rgba(255, 230, 86, 0.1);
    margin-top: 15%;
    width: 95vw;
    background-color: white;
  }
  .form-header {
    margin-top: 5vw;
  }
  input[type='text'],
  input[type='password'] {
    margin-top: 3%;
    margin-left: 21%;
    height: 10vw;
    width: 11em;
    font-size: 0.8em;
    font-weight: bolder;
    overflow-x: hidden;
    border: hidden;
  }

  .inputWrapper {
    height: 15vw;
    width: 80vw;
    font-size: 1.7em;
    font-weight: bolder;
    overflow-x: hidden;
    border-radius: 30px;
    border: 1px solid black;
    margin: 5%;
  }
  input[type='submit'] {
    margin: 7vw;

    height: 15vw;
    border-radius: 20px;
    color: white;
    background-color: #ffe656;
    font-size: 1.2em;
    font-weight: bold;
    text-shadow: 1px 1px black;
    /* width: 30vw; */
  }
  input[type='submit']:focus,
  input[type='text']:focus {
    border-radius: 12px;
  }
  input[type='submit']:hover {
    box-shadow: 0px 0px 1px 1px rgba(255, 230, 86, 0.1);
  }
  .email-one,
  .email-two,
  .lock-one,
  .lock-two {
    position: absolute;
    height: auto;
  }
  .email-one,
  .email-two {
    width: 30%;
    left: 5%;
  }
  .email-one {
    top: 20.5%;
  }
  .email-two {
    top: 32%;
  }
  .lock-one,
  .lock-two {
    width: 23%;
    left: 7%;
  }
  .lock-one {
    top: 45.5%;
  }
  .lock-two {
    top: 57%;
  }
}

